# aztec_ws

./: .gitignore  README.md  save.pgm  save.yaml  save2.pgm  save2.yaml  save3.pgm  save3.yaml  save4.pgm  save4.yaml  save5.data  save5.pgm  save5.yaml  script-reset.sh  script-us1.sh  script-us3.sh  script.sh  serial.data  serial2.data  serial3.data  serial4.data
src/4kcamera/yolov8-pose/: main.py  utils copy.py  utils.py  yolov8-pose.py  yolov8-pose_from_video.py
src/MobileNet/: main.py  main2.py
src/aztec_robot/: CMakeLists.txt  README.md  package.xml
src/aztec_robot/config/: main2.rviz  main3.rviz  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
src/aztec_robot/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot_core.xacro  ros2_control.xacro
src/aztec_robot/launch/: ball_tracker.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  localization_launch_old.py  navigation_launch.py  navigation_launch_old.py  online_async_launch.py  rsp.launch.py
src/aztec_robot/src/: minodo.cpp  minodo.py
src/depthai-ros/depthai_examples/launch/: mi_yolo.py  my_mobile.py
src/depthai-ros/depthai_examples/src/: yolov4_spatial_publisher.cpp
src/diffdrive_arduino/description/ros2_control/: diffbot.ros2_control.xacro
src/diffdrive_arduino/hardware/: diffbot_system.cpp
src/diffdrive_arduino/hardware/include/diffdrive_arduino/: arduino_comms.hpp  diffbot_system.hpp
src/gen2-emotion-recognition/: main.py  main2.py
src/gen2-human-pose/: main.py  main2.py  requirements.txt
src/oradar_lidar/: README.md
src/oradar_lidar/launch/: ms200_scan.launch  ms200_scan.launch.py  ms200_scan_view.launch
src/oradar_lidar/sdk/samples/: blocking_c_api_test.c  blocking_test.cpp  non-blocking_test.cpp
src/oradar_lidar/src/: oradar_scan_node.cpp
src/synexens_package/: CMakeLists.txt  package.xml
src/synexens_package/ext/sdk/include/: macros.h  version.h
src/synexens_package/ext/sdk/include/common/: calib_convert.h  exception.h  paraments_calib.pb.h
src/synexens_package/ext/sdk/include/libsynexens3/: config.h  context.h  device-info.h  device.h  frame.h  libsynexens3.h  option.h  pipeline.h  process-engine.h  sensor.h  types.h
src/synexens_package/ext/sdk/include/platform/: platform-interface.h  platform.h  uvc-xu-def.h
src/synexens_package/ext/sdk/include/platform/base/: uvc-base-camera.h
src/synexens_package/ext/sdk/include/platform/linux/: platform-ubuntu.h
src/synexens_package/ext/sdk/lib/: libsynexens3.so.0.6
src/synexens_package/ext/sdk/opencv-4.4.0/lib/x64/shared/: libopencv_calib3d.so.4.4.0  libopencv_features2d.so.4.4.0  libopencv_flann.so.4.4.0  libopencv_gapi.so.4.4.0  libopencv_highgui.so.4.4.0  libopencv_imgcodecs.so.4.4.0  libopencv_ml.so.4.4.0  libopencv_objdetect.so.4.4.0  libopencv_photo.so.4.4.0  libopencv_stitching.so.4.4.0  libopencv_video.so.4.4.0  libopencv_videoio.so.4.4.0
src/synexens_package/include/synexens_package/: synexens_calibration_transform_data.h  synexens_ros_device.h  synexens_ros_params.h  synexens_ros_types.h
src/synexens_package/launch/: driver_launch.py  viewer_launch.py
src/synexens_package/rviz/: synexens_node_rviz.rviz
src/synexens_package/scripts/: setup.sh  synexens-usb.rules
src/synexens_package/src/: synexens_calibration_transform_data.cpp  synexens_ros_device.cpp  synexens_ros_node.cpp  synexens_ros_params.cpp
